--- a/modules/ROOT/pages/cloudhub-setup.adoc
+++ b/modules/ROOT/pages/cloudhub-setup.adoc
@@ -54,9 +54,9 @@ To enable the Anypoint Monitoring agent:
 
 For more information about Anypoint Monitoring, see xref:monitoring::enable-apps-deployed-to-cloud.adoc[Enable Monitoring Using the UI].
 
-== Verify Supported Mule Runtime Engine (Mule) Versions for Policies
+== Verify Supported Mule Versions for Policies
 
-The APIs and policies that Anypoint Visualizer displays in the Policy Visualization come from an update to the agent in the Mule runtime. As a result, policies are shown in Anypoint Visualizer only for applications running on these Mule versions:
+The APIs and policies that Anypoint Visualizer displays in the Policy Visualization come from an update to the agent in Mule runtime engine (Mule). As a result, policies are shown in Anypoint Visualizer only for applications running on these Mule versions:
 
 * Mule 3.9.3+ patch releases available on <DATE> or later.
 * Mule 4.2.1+ patch releases available on <DATE> or later.
