--- a/modules/ROOT/pages/customize-your-canvas.adoc
+++ b/modules/ROOT/pages/customize-your-canvas.adoc
@@ -28,13 +28,13 @@ For more information, see xref:layers.adoc[Use Layers in Anypoint Visualizer].
 
 You can add tags to API, application, proxy, or other services, so you can use the tags as filters to adjust your view. You can use tags across Anypoint Visualizer, but note that you can only define tags in the xref:architecture-visualization.adoc[Architecture Visualization].
 
-To automate adding tag(s) to a node, use the property `anypoint.platform.visualizer.tags=<name>, <name>`.
+To automate adding tags to a node, use the property `anypoint.platform.visualizer.tags=<name>, <name>`.
 
 For more information, see xref:use-tags-in-visualizer.adoc[Use Tags in Visualizer].
 
 [[display-name]]
 == Display Name
 
-You can edit the display name of a service to provide a more readable, explanatory title. You can use display names across Anypoint Visualizer, but note that you can only define display names in the xref:architecture-visualization.adoc[Architecture Visualization].
+You can edit the display name of a service to provide a more readable, explanatory title. You can use display names across Anypoint Visualizer, but note that you can define display names only in the xref:architecture-visualization.adoc[Architecture Visualization].
 
 To automate adding a display name to the node, configure the property `anypoint.platform.visualizer.displayName=<name>`.
