--- a/modules/ROOT/pages/troubleshooting-visualization.adoc
+++ b/modules/ROOT/pages/troubleshooting-visualization.adoc
@@ -6,7 +6,7 @@ endif::[]
 
 == About the Troubleshooting Visualization
 
-The Troubleshooting Visualization shows you the current and past health of your Mule apps. It enables you to quickly visualize where your network is slow, receiving heavy traffic, or failing. From this visualization, you can drill down directly into Anypoint Monitoring dashboards or logs to continue to troubleshoot the performance of your systems.
+The Troubleshooting visualization shows you the current and past health of your Mule apps. It enables you to quickly visualize where your network is slow, receiving heavy traffic, or failing. From this visualization, you can drill down directly into Anypoint Monitoring dashboards or logs to continue to troubleshoot the performance of your systems.
 
 == Choosing Your Metric
 
@@ -36,8 +36,6 @@ To avoid long numbers, Anypoint Visualizer uses unit prefixes to simplify your v
 | Avg throughput | 66.7m TPM | 66.7 milli transactions per minute | 0.0667 TPM
 |===
 https://en.wikipedia.org/wiki/Metric_prefix[Here is a quick review of metric prefixes].
-
-
 
 == View Metrics for One Service in Your Network
 
