--- a/modules/ROOT/pages/policy-visualization.adoc
+++ b/modules/ROOT/pages/policy-visualization.adoc
@@ -5,15 +5,15 @@ endif::[]
 
 == About the Policy Visualization
 
-When deploying a Mule app, you must ensure that you are using a version of Mule that supports the Policy Visualization. Learn more about which xref:setup.adoc#select-a-deployment-type[runtimes are supported].
+When deploying a Mule app, you must ensure that you are using a version of Mule that supports the Policy visualization. Learn more about which xref:setup.adoc#select-a-deployment-type[runtimes are supported].
 
-The Policy Visualization enables you to see the relationship between Mule app deployments and the APIs they are implementing and which policies have been applied to those APIs. Data about which policies have been applied to your APIs comes from API Manager.
+The Policy visualization enables you to see the relationship between Mule app deployments and the APIs they are implementing and which policies have been applied to those APIs. Data about which policies have been applied to your APIs comes from API Manager.
 
-The Policy Visualization feature has two modes: _overview_ and _compliance_. Both modes show your deployed APIs, but each in a different manner:
+The Policy visualization feature has two modes: _overview_ and _compliance_. Both modes show your deployed APIs, but each in a different manner:
 
 * _Overview_ mode shows you the number of policies that are applied to each API in your canvas. The number on the API reflects this.
 
-* _Compliance_ mode enables you to explore which APIs are compliant with policies that you select. 
+* _Compliance_ mode enables you to explore which APIs are compliant with policies that you select.
 Compliance mode is active when you select policies from the *Policies* card; your canvas then changes to show which of your APIs are compliant with the policies you selected.
 The list of policies includes custom policies and is grouped by policy category.
 
@@ -25,7 +25,7 @@ When you select multiple policies, the number on the API node represents how man
 
 When you select a node within the graph, the node and its dependency stack are highlighted and all unconnected nodes are unavailable.
 
-In the Policy Visualization, the top card contains information about the Mule app. If the Mule app is an implementation of one or more APIs, cards for each of the APIs will appear below. The card will contain the API, version, and instance names as well as a list of which policies have been applied. The policies are listed in the order in which they are applied and are identified as either being applied at the API level or as an automated policy.
+In the Policy visualization, the top card contains information about the Mule app. If the Mule app is an implementation of one or more APIs, cards for each of the APIs will appear below. The card will contain the API, version, and instance names as well as a list of which policies have been applied. The policies are listed in the order in which they are applied and are identified as either being applied at the API level or as an automated policy.
 
 == Filtering Your View
 
