--- a/modules/ROOT/pages/use-tags-in-visualizer.adoc
+++ b/modules/ROOT/pages/use-tags-in-visualizer.adoc
@@ -19,11 +19,11 @@ In the following example, the tag `project-b` was added through properties and t
 image::properties-tags.png[]
 
 [[set-tag-ui]]
-== Setting the Tag Through the Architecture Visualization UI
+== Setting the Tag Through the s UI
 
 By default, when you first view a node using Anypoint Visualizer, it does not have any tags assigned. You can assign a tag to an existing node using the UI if it does not already have the same tag applied through properties.
 
-. In the Architecture Visualization, select the application node to tag. +
+. In the Architecture visualization, select the application node to tag. +
 You can hold the shift key to select multiple nodes to apply tags to all the selected nodes at once. +
 _Result:_ The *Customization* section for the node appears in the *Details* tab of the node's card as shown in the following image:
 +
@@ -51,7 +51,7 @@ To delete a tag assigned using the `anypoint.platform.visualizer.tags=<name>` pr
 
 To delete a tag that was configured in the UI:
 
-. In the Architecture Visualization, select a node with the tag you wish to delete.
+. In the Architecture visualization, select a node with the tag you wish to delete.
 . Locate the tag in the *Customization* section, and click the *X* on the tag to delete.
 
 == See Also
