--- a/modules/ROOT/pages/troubleshooting-visualization.adoc
+++ b/modules/ROOT/pages/troubleshooting-visualization.adoc
@@ -70,16 +70,15 @@ You can hide nodes through what you select in the canvas.
 
 * To hide a single node, select it, and then click *Hide selected service*.
 * To hide multiple nodes, multiselect them, and then click *Hide selected services*.
-* To hide all of the services other than the selected nodes, you can click *Hide other services*. If you want to hide everything that is not related to a given dependency stack, select a node and then click *Select dependents and dependencies*, which selects all nodes related to the service which you selected. Then, click *Hide other services*.
+* To hide all of the services other than the selected nodes, you can click *Hide other services*. 
+If you want to hide everything that is not related to a given dependency stack, select a node and then click *Select dependents and dependencies*, which selects all nodes related to the service which you selected. Then, click *Hide other services*.
 
 You can search for a node (service) in the *Search services* text field. Services containing your search in any part of their name are highlighted, while others fade.
 
 [[export-view]]
 == Export Your Network View
 
-You can export the view of your network showing on your canvas to a PNG file.
+You can export the view of your network showing on your canvas to a PNG file by clicking the *Export as Image* button next to the zoom controls in the bottom right.
 
 * If you customized your view with filters, the customized network topology is exported.
 * If you selected metrics or durations, these settings are reflected in the export.
-
-To export a view of your network as a PNG, click the *Export as Image* button next to the zoom controls in the bottom right.
