--- a/modules/ROOT/pages/cloudhub-setup.adoc
+++ b/modules/ROOT/pages/cloudhub-setup.adoc
@@ -56,12 +56,7 @@ For more information about Anypoint Monitoring, see xref:monitoring::enable-apps
 
 == Verify Supported Mule Versions for Policies
 
-The APIs and policies that Anypoint Visualizer displays in the Policy Visualization come from an update to the agent in Mule runtime engine (Mule). As a result, policies are shown in Anypoint Visualizer only for applications running on these Mule versions:
-
-* Mule 3.9.3+ patch releases available on December 12, 2019 or later.
-* Support for Mule 4.2.x will be available in the next patch update.
-
-// add! dates! above! dependency
+The APIs and policies that Anypoint Visualizer displays in the Policy visualization come from an update to the agent in Mule runtime engine (Mule). As a result, policies are shown in Anypoint Visualizer only for applications running on any of the patches of Anypoint Visualizer supported Mule versions available on December 12, 2019 or later.
 
 == Dedicated Load Balancers
 
