--- a/modules/ROOT/pages/runtime-fabric-setup.adoc
+++ b/modules/ROOT/pages/runtime-fabric-setup.adoc
@@ -19,7 +19,7 @@ Anypoint Visualizer relies on a header injection to display connections between 
 
 == Enable Header Injection
 
-Anypoint Visualizer requires an additional header injection for Anypoint Runtime Fabric deployments. However, due to potential performance impact in Mule 4, header injection is disabled by default.
+If you are using Mule 4.x released before <date>, Anypoint Visualizer requires an additional header injection for Anypoint Runtime Fabric deployments. However, due to potential performance impact, header injection is disabled by default in Mule 4.x released before <date>.
 For Runtime Fabric, you must enable the header injection at the app level:
 
 . Navigate to the *Properties* tab and take one of the following actions:
