--- a/modules/ROOT/pages/standalone-mule-setup.adoc
+++ b/modules/ROOT/pages/standalone-mule-setup.adoc
@@ -16,16 +16,14 @@ Anypoint Visualizer supports the following Mule versions for standalone Mule dep
 
 To support Anypoint Visualizer for standalone Mule deployments, install the xref:monitoring::am-installing.adoc[Anypoint Monitoring agent].
 Anypoint Visualizer requires header injection for standalone Mule deployments so that the deployments display the correct connections.
-Due to a potential performance impact, however, header injection is disabled by default for Mule 4 apps.
+Due to a potential performance impact, however, header injection is disabled by default for Mule Version 4.x released before <date>.
 
 [NOTE]
 The APIs and policies that Anypoint Visualizer displays in the Policy visualization come from an update to the agent. As a result, policies are shown in Anypoint Visualizer only if your deployments use an agent from December 19, 2019 or later.
 
-// add date! dependency!
-
 == Enable Header Injection
 
-For a standalone Mule deployment, you must enable header injection at the server (not app) level.
+For a standalone Mule deployment using Mule Version 4.x released before <date>, you must enable header injection at the server (not app) level.
 This affects all applications running on the server.
 
 . To enable header injection for apps deployed to a standalone Mule instance, click *Server* in the menu on the left of *Runtime Manager*.
