--- a/modules/ROOT/pages/runtime-fabric-setup.adoc
+++ b/modules/ROOT/pages/runtime-fabric-setup.adoc
@@ -19,7 +19,7 @@ Anypoint Visualizer relies on a header injection to display connections between 
 
 == Enable Header Injection
 
-If you are using Mule 4.x released before <date>, Anypoint Visualizer requires an additional header injection for Anypoint Runtime Fabric deployments. However, due to potential performance impact, header injection is disabled by default in Mule 4.x released before <date>.
+Anypoint Visualizer requires an additional header injection for Anypoint Runtime Fabric deployments. However, due to potential performance impact, header injection is disabled by default in Mule 4.x released before <Insert RTF Mule Runtime Date with UA 2.2.2>.
 For Runtime Fabric, you must enable the header injection at the app level:
 
 . Navigate to the *Properties* tab and take one of the following actions:
@@ -29,8 +29,7 @@ For Runtime Fabric, you must enable the header injection at the app level:
 * If you are deploying an app for the first time, navigate to the deployment page and click *Deploy application*.
 . In the *Properties* tab, set the following property in the app: `anypoint.platform.config.analytics.agent.header_injection.disabled=false`
 
-You must set the property to `false` because the property is disabled by default.
-
+Additionally, you will need to use version 1.5.12 or above of the http connector in your mule 4 applications.
 == Verify Supported Mule Runtime Engine (Mule) Versions for Policies
 
 The APIs and policies that Anypoint Visualizer displays in the Policy visualization come from an update to the agent in Mule runtime engine (Mule). As a result, Anypoint Visualizer shows policies only for apps running on supported Mule versions released on December 12, 2019 or later.
