--- a/modules/ROOT/pages/standalone-mule-setup.adoc
+++ b/modules/ROOT/pages/standalone-mule-setup.adoc
@@ -15,15 +15,14 @@ Anypoint Visualizer supports the following Mule versions for standalone Mule dep
 == Install Agent
 
 To support Anypoint Visualizer for standalone Mule deployments, install the xref:monitoring::am-installing.adoc[Anypoint Monitoring agent].
-Anypoint Visualizer requires header injection for standalone Mule deployments so that the deployments display the correct connections.
-Due to a potential performance impact, however, header injection is disabled by default for Mule Version 4.x released before <date>.
 
 [NOTE]
 The APIs and policies that Anypoint Visualizer displays in the Policy visualization come from an update to the agent. As a result, policies are shown in Anypoint Visualizer only if your deployments use an agent from December 19, 2019 or later.
 
 == Enable Header Injection
 
-For a standalone Mule deployment using Mule Version 4.x released before <date>, you must enable header injection at the server (not app) level.
+Anypoint Visualizer requires header injection for standalone Mule deployments so that the deployments display the correct connections.
+However, due to a potential performance impact, header injection is disabled by default for Mule Version 4.x with Anypoint Monitoring agent released before <date>. You must enable header injection at the server (not app) level.
 This affects all applications running on the server.
 
 . To enable header injection for apps deployed to a standalone Mule instance, click *Server* in the menu on the left of *Runtime Manager*.
@@ -32,6 +31,7 @@ This affects all applications running on the server.
 `anypoint.platform.config.analytics.agent.header_injection.disabled=false`
 You must set the property to `false`, as shown in the example to enable header injection, because the property is disabled by default.
 
+Additionally, you will need to use version 1.5.12 or above of the http connector in your mule 4 applications.
 === Manage Performance and Data Collection
 
 The agent that Anypoint Visualizer uses to collect metadata sometimes has a performance impact.
